ME - fix feedback(market cap on small screens, divider width

--- a/src/components/AssetList/TableRow/TableRow.scss
+++ b/src/components/AssetList/TableRow/TableRow.scss
@@ -117,5 +117,5 @@ $tablePadding: 11px 20px 10px 19px;
 	margin-left: -15px;
 	width: calc(100% + 30px);
 	height: 0;
-	border: solid 1px #e6e6e6;
+	border-bottom: solid 1px #e6e6e6;
 }
